upgrade spring boot from 2.5.14 to 2.7.18 and other dependencies